--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.31)
+cmake_minimum_required(VERSION 3.11)
 project(sandbox2D)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -6,14 +6,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Gather sources
-file(GLOB_RECURSE SOURCE_FILES
-        src/*.cpp
-        src/*.h
-)
+file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
+file(GLOB_RECURSE HEADER_FILES src/*.h src/*.hpp)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-target_include_directories(${PROJECT_NAME} PRIVATE /opt/homebrew/include)
-target_link_directories(${PROJECT_NAME} PRIVATE /opt/homebrew/lib)
+target_include_directories(${PROJECT_NAME} PRIVATE HEADER_FILES /opt/homebrew/include)
+target_link_directories(${PROJECT_NAME} PRIVATE HEADER_FILES /opt/homebrew/lib)
 
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
